--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -6,11 +6,26 @@
 	<property name="mddf-lib.version" value="1.3.rc4" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
 	<property name="app.version.cmm" value="${mddf-lib.version}.b" />
-	<property name="app.version.avail" value="${mddf-lib.version}.a" />
+	<property name="app.version.avail" value="${mddf-lib.version}.b" />
 	<property name="proj.appDev" value="${proj.home}/dev/packaging" />
 	<property name="proj.rsrcFolder" value="${proj.home}/resources" />
 	<property name="proj.package" value="com/movielabs/mddf/tools" />
 	<property name="binaries.home" value="${proj.home}/binaries" />
+	<property name="jar.executable"
+		value="${proj.home}/../binaries/mddf-tool-v${mddf-lib.version}" />
+
+	<fileset id="mddflib_jars" dir="${mddf-lib.home}/lib">
+		<include name="**/commons-beanutils-*.jar" />
+		<include name="**/commons-collections*.jar" />
+		<include name="**/commons-logging-*.jar" />
+		<include name="**/ezmorph-*.jar" />
+		<include name="**/jaxen-*.jar" />
+		<include name="**/jdom-*.jar" />
+		<include name="**/json-lib-*.jar" />
+		<include name="**/log4j-*.jar" />
+		<include name="**/poi-*.jar" />
+		<include name="**/xmlbeans-*.jar" />
+	</fileset>
 
 	<target name="test">
 		<echo message="Hello, this is ANT" />
@@ -121,8 +136,8 @@
 			</fileset>
 		</copy>
 
-		<javac includeantruntime="false" source="1.8" target="1.8" debug="true"
-			srcdir="${appPack.dir}/build/src" destdir="${appPack.dir}/build/classes"
+		<javac includeantruntime="false" source="1.8" target="1.8"
+			debug="true" srcdir="${appPack.dir}/build/src" destdir="${appPack.dir}/build/classes"
 			encoding="UTF-8">
 			<classpath>
 				<fileset dir="${appPack.dir}/build/libs">
@@ -244,34 +259,25 @@
 	<target name="create_run_jar" depends="do-compile">
 		<echo
 			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
-		<jar destfile="${proj.home}/../binaries/mddf-tool-v${mddf-lib.version}.jar">
+		<jar destfile="${jar.executable}.jar">
 			<manifest>
 				<attribute name="Main-Class"
 					value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
 				<attribute name="Rsrc-Main-Class" value="com.movielabs.mddf.tools.ToolLauncher" />
 				<attribute name="Class-Path" value="." />
 				<attribute name="Rsrc-Class-Path"
-					value="./ mddf-lib-${mddf-lib.version}.jar commons-beanutils-1.9.2.jar commons-collections-3.2.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar jaxen-1.1.1.jar jaxen-jdom.jar jdom-2.0.5.jar json-lib-2.4-jdk15.jar log4j-api-2.6.2.jar log4j-core-2.6.2.jar poi-3.14-20160307.jar poi-ooxml-3.14-20160307.jar poi-ooxml-schemas-3.14-20160307.jar xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
+					value="./ mddf-lib-${mddf-lib.version}.jar commons-beanutils-1.9.2.jar 
+				commons-collections-3.2.1.jar commons-collections4-4.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar jaxen-1.1.1.jar 
+				jaxen-jdom.jar jdom-2.0.5.jar json-lib-2.4-jdk15.jar log4j-api-2.6.2.jar 
+				log4j-core-2.6.2.jar poi-3.17.jar poi-ooxml-3.17.jar poi-ooxml-schemas-3.17.jar 
+				xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
 			</manifest>
-			<zipfileset src="jar-in-jar-loader.zip" />
 			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="commons-beanutils-1.9.2.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="commons-collections-3.2.1.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="commons-logging-1.2.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="ezmorph-1.0.6.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="jaxen-1.1.1.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="jaxen-jdom.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="jdom-2.0.5.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="json-lib-2.4-jdk15.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="log4j-api-2.6.2.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="log4j-core-2.6.2.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="poi-3.14-20160307.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="poi-ooxml-3.14-20160307.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="poi-ooxml-schemas-3.14-20160307.jar" />
-			<zipfileset dir="${mddf-lib.home}/lib" includes="xmlbeans-2.6.0.jar" />
-			<zipfileset dir="${proj.home}/lib" includes="commons-cli-1.3.1.jar" />
-			<zipfileset dir="${proj.home}/lib" includes="commons-lang-2.6.jar" />
+			<zipfileset refid="mddflib_jars" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-cli-*.jar" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-lang-*.jar" />
 			<fileset dir="${appPack.dir}/build/classes" />
+			<zipfileset src="jar-in-jar-loader.zip" />
 			<zipfileset dir="/opt/eclipse/plugins/org.junit_4.12.0.v201504281640"
 				includes="junit.jar" />
 			<zipfileset dir="/opt/eclipse/plugins"
@@ -280,6 +286,54 @@
 	</target>
 
 
+	<target name="create_run_jar_2" depends="do-compile">
+		<echo
+			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
+		<jar destfile="${jar.executable}-X2.jar">
+			<manifest>
+				<attribute name="Main-Class"
+					value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
+				<attribute name="Rsrc-Main-Class" value="com.movielabs.mddf.tools.ToolLauncher" />
+				<attribute name="Class-Path" value="." />
+				<attribute name="Rsrc-Class-Path"
+					value="./ lib/* junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
+			</manifest>
+			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar"
+				prefix="lib" />
+			<zipfileset refid="mddflib_jars" prefix="lib" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-cli-*.jar"
+				prefix="lib" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-lang-*.jar"
+				prefix="lib" />
+			<fileset dir="${appPack.dir}/build/classes" />
+			<zipfileset src="jar-in-jar-loader.zip" />
+			<zipfileset dir="/opt/eclipse/plugins/org.junit_4.12.0.v201504281640"
+				includes="junit.jar" />
+			<zipfileset dir="/opt/eclipse/plugins"
+				includes="org.hamcrest.core_1.3.0.v201303031735.jar" />
+		</jar>
+	</target>
 
+
+	<target name="create_run_jar_3" depends="do-compile">
+		<echo
+			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
+		<jar destfile="${jar.executable}-X3.jar">
+			<manifest>
+				<attribute name="Main-Class" value="com.movielabs.mddf.tools.ToolLauncher" />
+				<attribute name="Class-Path"  
+					value="./ mddf-lib-${mddf-lib.version}.jar commons-beanutils-1.9.2.jar 
+				commons-collections-3.2.1.jar commons-collections4-4.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar jaxen-1.1.1.jar 
+				jaxen-jdom.jar jdom-2.0.5.jar json-lib-2.4-jdk15.jar log4j-api-2.6.2.jar 
+				log4j-core-2.6.2.jar poi-3.17.jar poi-ooxml-3.17.jar poi-ooxml-schemas-3.17.jar 
+				xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
+			</manifest>
+			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar" />
+			<zipfileset refid="mddflib_jars" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-cli-*.jar" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-lang-*.jar" />
+			<fileset dir="${appPack.dir}/build/classes" /> 
+		</jar>
+	</target>
 
 </project>
