--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.movielabs.mddf</groupId>
 	<artifactId>mddf-lib</artifactId>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.3.rc4-SNAPSHOT</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
 
@@ -27,6 +27,11 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
 		</dependency>
 
 		<dependency>
@@ -96,7 +101,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sf.jsignature.io-tools</groupId>
+			<artifactId>easystream</artifactId>
+			<version>1.2.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -142,4 +151,8 @@
 	</organization>
 	<url>https://github.com/MovieLabs/mddf</url>
 
+	<properties>
+		<mddf.src.tag>1.3.3.rc4</mddf.src.tag>
+		<mddf.build>4</mddf.build>
+	</properties>
 </project>
