--- a/mddf-lib/src/com/movielabs/mddflib/avails/xml/MetadataMappings.json
+++ b/mddf-lib/src/com/movielabs/mddflib/avails/xml/MetadataMappings.json
@@ -150,7 +150,7 @@
 				},
 
 				"{avail}LocalizationOffering": "AvailMetadata/LocalizationType",
-				"{avail}GroupingEntity":
+				"{avail}GroupingEntity": 
 				{
 					"%FUNCTION": 
 					{
@@ -161,7 +161,8 @@
 							"col": "AvailMetadata/GroupIdentity"
 						}
 					}
-				},				
+				},
+
 				"{avail}CompanyDisplayCredit": 
 				{
 					"{md}DisplayString": "AvailMetadata/CompanyDisplayCredit"
@@ -619,7 +620,7 @@
 					}
 				},
 
-				"{avail}LocalizationOffering": "AvailMetadata/LocalizationType",				
+				"{avail}LocalizationOffering": "AvailMetadata/LocalizationType",
 				"{avail}CompanyDisplayCredit": 
 				{
 					"{md}DisplayString": "AvailMetadata/CompanyDisplayCredit"
@@ -633,8 +634,33 @@
 			{
 				"{avail}TitleDisplayUnlimited": "AvailMetadata/EpisodeTitleDisplayUnlimited",
 				"{avail}TitleInternalAlias": "AvailMetadata/EpisodeTitleInternalAlias",
+				"{avail}EditEIDR-URN": 
+				{
+					"%FUNCTION": 
+					{
+						"name": "eidr",
+						"args": 
+						{
+							"col": "AvailAsset/EpisodeID",
+							"filter": "yes"
+						}
+					}
+				},
+
 				"{avail}AltIdentifier": 
 				[
+					{
+						"%FUNCTION": 
+						{
+							"name": "altId",
+							"args": 
+							{
+								"col": "AvailAsset/EpisodeID",
+								"filterEidr": "yes"
+							}
+						}
+					},
+
 					{
 						"%FUNCTION": 
 						{
@@ -752,6 +778,19 @@
 			"{avail}SeasonMetadata": 
 			{
 				"{avail}SeasonContentID": "AvailAsset/SeasonContentID",
+				"{avail}SeasonEIDR-URN": 
+				{
+					"%FUNCTION": 
+					{
+						"name": "eidr",
+						"args": 
+						{
+							"col": "AvailMetadata/SeasonID",
+							"filter": "yes"
+						}
+					}
+				},
+
 				"{avail}SeasonTitleDisplayUnlimited": "AvailMetadata/SeasonTitleDisplayUnlimited",
 				"{avail}SeasonTitleInternalAlias": "AvailMetadata/SeasonTitleInternalAlias",
 				"{avail}SeasonNumber": 
@@ -849,6 +888,19 @@
 			"{avail}SeriesMetadata": 
 			{
 				"{avail}SeriesContentID": "AvailAsset/SeriesContentID",
+				
+				"{avail}SeriesEIDR-URN": 
+				{
+					"%FUNCTION": 
+					{
+						"name": "eidr",
+						"args": 
+						{
+							"col": "AvailMetadata/SeriesID",
+							"filter": "yes"
+						}
+					}
+				},
 				"{avail}SeriesTitleDisplayUnlimited": "AvailMetadata/SeriesTitleDisplayUnlimited",
 				"{avail}SeriesTitleInternalAlias": "AvailMetadata/SeriesTitleInternalAlias",
 				"{avail}ReleaseDate": "AvailMetadata/ReleaseYear",
@@ -1030,7 +1082,7 @@
 					}
 				},
 
-				"{avail}LocalizationOffering": "AvailMetadata/LocalizationType",				
+				"{avail}LocalizationOffering": "AvailMetadata/LocalizationType",
 				"{avail}CompanyDisplayCredit": 
 				{
 					"{md}DisplayString": "AvailMetadata/CompanyDisplayCredit"
