--- a/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
+++ b/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
@@ -778,8 +778,8 @@
 				"{avail}Term[@termName[.='WSP' or .='DMRP' or .='SMRP' or .='TPR-WSP' or .='TPR-DMRP' or .='TPR-SMRP' ]]/{avail}Money",
 				"{avail}Term[@termName[.='NA' or .='Tier' or .='LicenseFee' or .='Category' or .='TPR-Tier' or .='TPR-LicenseFee' or .='TPR-Category' ]]/{avail}Text"
 			],
-
 			"AvailTrans:RentalDuration": "{avail}Term/{avail}Duration[../@termName='RentalDuration']",
+			"AvailTrans:RequiredFulfillmentLanguages": "*{avail}AssetLanguage[@assetProvided='true']",
 			"AvailTrans:SpecialPreOrderFulfillDate": "{avail}Term/{avail}Event[../@termName='PreOrderFulfillDate']",
 			"AvailTrans:SRP": "{avail}Term/{avail}Money[../@termName='SRP']",
 			"AvailTrans:Start": 
@@ -814,6 +814,7 @@
 			"Avail:DisplayName": "{avail}Licensor/{md}DisplayName",
 			"Avail:DMA_ID": "{avail}SharedEntitlement[@ecosystem='DMA']/{avail}EcosystemID",
 			"Avail:ExceptionFlag": "{avail}ExceptionFlag",
+			"Avail:Licensee": "{avail}Transaction/{avail}Licensee/{md}DisplayName",
 			"Avail:ReportingID": "{avail}ReportingID",
 			"Avail:RetailerSpare1": "n.a",
 			"Avail:RetailerSpare2": "n.a",
@@ -856,7 +857,11 @@
 				"Season": "{avail}SeasonMetadata/{avail}SeriesMetadata/{avail}CompanyDisplayCredit/{md}DisplayString",
 				"Episode": "{avail}EpisodeMetadata/{avail}SeasonMetadata/{avail}SeriesMetadata/{avail}CompanyDisplayCredit/{md}DisplayString"
 			},
-
+			"AvailMetadata:Director": 
+			{
+				"Season": "{avail}SeasonMetadata/{avail}People[//{md}JobFunction='Director']/{md}Name/{md}DisplayName",
+				"Episode": "{avail}EpisodeMetadata/{avail}People[//{md}JobFunction='Director']/{md}Name/{md}DisplayName"
+			},
 			"AvailMetadata:DistributionNumber": "n.a",
 			"AvailMetadata:EpisodeCount": 
 			{
@@ -877,11 +882,25 @@
 			},
 
 			"AvailMetadata:EpisodeTitleDisplayUnlimited": "{avail}EpisodeMetadata/{avail}TitleDisplayUnlimited",
+			"AvailMetadata:EpisodeTitleID": 
+			{
+				"%FUNCTION": 
+				{
+					"name": "eidr",
+					"args": 
+					{
+						"xpath": "{avail}EpisodeMetadata/{avail}TitleEIDR-URN"
+					}
+				}
+			},
 			"AvailMetadata:EpisodeTitleInternalAlias": 
 			{
 				"Episode": "{avail}EpisodeMetadata/{avail}TitleInternalAlias"
 			},
-
+			"AvailMetadata:GroupIdentity": 
+			{
+				"Episode":"{avail}EpisodeMetadata/{avail}GroupingEntity[./{md}Type='SVOD channel']/{md}DisplayName"
+			},
 			"AvailMetadata:LocalizationType": "{avail}EpisodeMetadata/{avail}LocalizationOffering",
 			"AvailMetadata:RatingReason": 
 			{
@@ -997,14 +1016,19 @@
 			"AvailTrans:AllowedLanguages": "*{avail}AllowedLanguage",
 			"AvailTrans:AnnounceDate": "{avail}Term/{avail}Event[../@termName='AnnounceDate']",
 			"AvailTrans:AssetLanguage": "{avail}AssetLanguage",
+			"AvailTrans:BrandingRights": "{avail}Term/{avail}Boolean[../@termName='BrandingRights']",
+			"AvailTrans:BrandingRightsAttributes": "{avail}Term/{avail}Text[../@termName='BrandingRightsAttributes']",			
 			"AvailTrans:ContractID": "{avail}ContractID",
-			"AvailTrans:Description": "{avail}Description",
+			"AvailTrans:Description": "{avail}Description", 
+			"AvailTrans:Download": "{avail}Term/{avail}Text[../@termName='Download']",
 			"AvailTrans:End": 
 			[
 				"{avail}End",
 				"{avail}EndCondition"
 			],
-
+			"AvailTrans:EndLag": "{avail}EndCondition/@lag",
+			"AvailTrans:Exclusive": "{avail}Term/{avail}Boolean[../@termName='Exclusive']",
+			"AvailTrans:ExclusiveAttributes": "{avail}Term/{avail}Text[../@termName='ExclusiveAttributes']", 
 			"AvailTrans:FixedEndDate": "{avail}Term/{avail}Event[../@termName='FixedEndDate']",
 			"AvailTrans:FormatProfile": "{avail}FormatProfile",
 			"AvailTrans:HDR": "{avail}FormatProfile/@HDR",
@@ -1022,8 +1046,8 @@
 				"{avail}Term[@termName[.='WSP' or .='SeasonWSP' or .='EpisodeWSP' or .='DMRP' or .='SMRP' or .='TPR-WSP' or .='TPR-DMRP' or .='TPR-SMRP' ]]/{avail}Money",
 				"{avail}Term[@termName[.='NA' or .='Tier' or .='LicenseFee' or .='Category' or .='TPR-Tier' or .='TPR-LicenseFee' or .='TPR-Category' ]]/{avail}Text"
 			],
-
-			"AvailTrans:RentalDuration": "{avail}Term/{avail}Duration[../@termName='RentalDuration']",
+			"AvailTrans:RentalDuration": "{avail}Term/{avail}Duration[../@termName='RentalDuration']",			
+			"AvailTrans:RequiredFulfillmentLanguages": "*{avail}AssetLanguage[@assetProvided='true']",			
 			"AvailTrans:SpecialPreOrderFulfillDate": "{avail}Term/{avail}Event[../@termName='PreOrderFulfillDate']",
 			"AvailTrans:SRP": "{avail}Term/{avail}Money[../@termName='SRP']",
 			"AvailTrans:Start": 
@@ -1031,16 +1055,22 @@
 				"{avail}Start",
 				"{avail}StartCondition"
 			],
-
+			"AvailTrans:StartLag": "{avail}StartCondition/@lag",
 			"AvailTrans:SuppressionLiftDate": "{avail}Term/{avail}Event[../@termName='SuppressionLiftDate']",
 			"AvailTrans:Territory": 
 			[
 				"{avail}Territory/{md}country",
 				"{avail}Territory/{md}countryRegion"
 			],
-
+			"AvailTrans:TerritoryExclusion": 
+			[
+				"{avail}TerritoryExcluded/{md}country",
+				"{avail}TerritoryExcluded/{md}countryRegion"
+			],
+			"AvailTrans:TitleStatus": "{avail}Term/{avail}Text[../@termName='TitleStatus']",
 			"AvailTrans:WatchDuration": "{avail}Term/{avail}Duration[../@termName='WatchDuration']",
-			"AvailTrans:WCG": "{avail}FormatProfile/@WCG"
+			"AvailTrans:WCG": "{avail}FormatProfile/@WCG",
+			"AvailTrans:WindowDuration": "{avail}WindowDuration"
 		}
 	}
 	
