--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -3,7 +3,7 @@
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property name="proj.home" value="${basedir}/../.." />
 	<property name="mddf-lib.home" value="${proj.home}/../mddf-lib" />
-	<property name="mddf-lib.version" value="1.3.2" />
+	<property name="mddf-lib.version" value="1.4_rc2" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
 	<property name="app.version.cmm" value="${mddf-lib.version}.a" />
 	<property name="app.version.avail" value="${mddf-lib.version}.a" />
@@ -19,12 +19,14 @@
 		<include name="**/commons-collections*.jar" />
 		<include name="**/commons-logging-*.jar" />
 		<include name="**/ezmorph-*.jar" />
+		<include name="**/easystream-*.jar" />
 		<include name="**/jaxen-*.jar" />
 		<include name="**/jdom-*.jar" />
 		<include name="**/json-lib-*.jar" />
 		<include name="**/log4j-*.jar" />
 		<include name="**/poi-*.jar" />
 		<include name="**/xmlbeans-*.jar" />
+		<include name="**/slf4j-api-1.7.25.jar"/>
 	</fileset>
 
 	<target name="test">
@@ -267,10 +269,10 @@
 				<attribute name="Class-Path" value="." />
 				<attribute name="Rsrc-Class-Path"
 					value="./ mddf-lib-${mddf-lib.version}.jar commons-beanutils-1.9.2.jar 
-				commons-collections-3.2.1.jar commons-collections4-4.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar jaxen-1.1.1.jar 
+				commons-collections-3.2.1.jar commons-collections4-4.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar easystream-1.2.15.jar jaxen-1.1.1.jar 
 				jaxen-jdom.jar jdom-2.0.5.jar json-lib-2.4-jdk15.jar log4j-api-2.6.2.jar 
 				log4j-core-2.6.2.jar poi-3.17.jar poi-ooxml-3.17.jar poi-ooxml-schemas-3.17.jar 
-				xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
+				xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar slf4j-api-1.7.25.jar" />
 			</manifest>
 			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar" />
 			<zipfileset refid="mddflib_jars" />
@@ -286,54 +288,5 @@
 	</target>
 
 
-	<target name="create_run_jar_2" depends="do-compile">
-		<echo
-			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
-		<jar destfile="${jar.executable}-X2.jar">
-			<manifest>
-				<attribute name="Main-Class"
-					value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
-				<attribute name="Rsrc-Main-Class" value="com.movielabs.mddf.tools.ToolLauncher" />
-				<attribute name="Class-Path" value="." />
-				<attribute name="Rsrc-Class-Path"
-					value="./ lib/* junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
-			</manifest>
-			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar"
-				prefix="lib" />
-			<zipfileset refid="mddflib_jars" prefix="lib" />
-			<zipfileset dir="${proj.home}/lib" includes="commons-cli-*.jar"
-				prefix="lib" />
-			<zipfileset dir="${proj.home}/lib" includes="commons-lang-*.jar"
-				prefix="lib" />
-			<fileset dir="${appPack.dir}/build/classes" />
-			<zipfileset src="jar-in-jar-loader.zip" />
-			<zipfileset dir="/opt/eclipse/plugins/org.junit_4.12.0.v201504281640"
-				includes="junit.jar" />
-			<zipfileset dir="/opt/eclipse/plugins"
-				includes="org.hamcrest.core_1.3.0.v201303031735.jar" />
-		</jar>
-	</target>
-
-
-	<target name="create_run_jar_3" depends="do-compile">
-		<echo
-			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
-		<jar destfile="${jar.executable}-X3.jar">
-			<manifest>
-				<attribute name="Main-Class" value="com.movielabs.mddf.tools.ToolLauncher" />
-				<attribute name="Class-Path"  
-					value="./ mddf-lib-${mddf-lib.version}.jar commons-beanutils-1.9.2.jar 
-				commons-collections-3.2.1.jar commons-collections4-4.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar jaxen-1.1.1.jar 
-				jaxen-jdom.jar jdom-2.0.5.jar json-lib-2.4-jdk15.jar log4j-api-2.6.2.jar 
-				log4j-core-2.6.2.jar poi-3.17.jar poi-ooxml-3.17.jar poi-ooxml-schemas-3.17.jar 
-				xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
-			</manifest>
-			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar" />
-			<zipfileset refid="mddflib_jars" />
-			<zipfileset dir="${proj.home}/lib" includes="commons-cli-*.jar" />
-			<zipfileset dir="${proj.home}/lib" includes="commons-lang-*.jar" />
-			<fileset dir="${appPack.dir}/build/classes" /> 
-		</jar>
-	</target>
 
 </project>
