--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.movielabs.mddf</groupId>
 	<artifactId>mddf-lib</artifactId>
-	<version>1.4_rc2</version>
+	<version>1.4</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
 
@@ -136,6 +136,22 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>write-project-properties</goal>
+						</goals>
+						<configuration>
+							<outputFile>${project.build.outputDirectory}/com/movielabs/mddflib/build.properties</outputFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -151,7 +167,9 @@
 	</organization>
 	<url>https://github.com/MovieLabs/mddf</url>
 	<properties>
-		<mddf.src.tag>1.4_rc2</mddf.src.tag>
+		<mddf.src.tag>1.4</mddf.src.tag>
 		<mddf.build>1</mddf.build>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
 	</properties>
 </project>
