--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -3,7 +3,7 @@
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property name="proj.home" value="${basedir}/../.." />
 	<property name="mddf-lib.home" value="${proj.home}/../mddf-lib" />
-	<property name="mddf-lib.version" value="1.4_rc2" />
+	<property name="mddf-lib.version" value="1.4" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
 	<property name="app.version.cmm" value="${mddf-lib.version}.a" />
 	<property name="app.version.avail" value="${mddf-lib.version}.a" />
@@ -68,9 +68,9 @@
 			</fileset>
 		</copy>
 		<echo
-			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
+			message="Using mddf-lib JAR ${mddf-lib.home}/target/mddf-lib-${mddf-lib.version}.jar" />
 		<copy todir="${appPack.dir}/externalLibs">
-			<fileset dir="${mddf-lib.home}">
+			<fileset dir="${mddf-lib.home}/target">
 				<include name="mddf-lib-${mddf-lib.version}.jar" />
 			</fileset>
 		</copy>
@@ -260,7 +260,7 @@
 
 	<target name="create_run_jar" depends="do-compile">
 		<echo
-			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
+			message="Using mddf-lib JAR ${mddf-lib.home}/target/mddf-lib-${mddf-lib.version}.jar" />
 		<jar destfile="${jar.executable}.jar">
 			<manifest>
 				<attribute name="Main-Class"
@@ -274,7 +274,7 @@
 				log4j-core-2.6.2.jar poi-3.17.jar poi-ooxml-3.17.jar poi-ooxml-schemas-3.17.jar 
 				xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar slf4j-api-1.7.25.jar" />
 			</manifest>
-			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar" />
+			<zipfileset dir="${mddf-lib.home}/target" includes="mddf-lib-${mddf-lib.version}.jar" />
 			<zipfileset refid="mddflib_jars" />
 			<zipfileset dir="${proj.home}/lib" includes="commons-cli-*.jar" />
 			<zipfileset dir="${proj.home}/lib" includes="commons-lang-*.jar" />
