--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -3,10 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-lib</artifactId>
-	<version>1.4.1.rc1-SNAPSHOT</version>
+	<version>${mddf.src.tag}</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
 
+	<properties>
+		<mddf.src.tag>1.4.1.rc2-SNAPSHOT</mddf.src.tag>
+		<mddf.build>1</mddf.build>
+		<timestamp>${maven.build.timestamp}</timestamp>
+		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -212,10 +219,4 @@
 	</scm>
 
 	<url>https://github.com/MovieLabs/mddf</url>
-	<properties>
-		<mddf.src.tag>1.4.1.rc1</mddf.src.tag>
-		<mddf.build>1</mddf.build>
-		<timestamp>${maven.build.timestamp}</timestamp>
-		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
-	</properties>
 </project>
